--- a/wp-content/themes/twentyseventeen/assets/css/style.scss
+++ b/wp-content/themes/twentyseventeen/assets/css/style.scss
@@ -141,25 +141,25 @@ $main-hover : rgba(50, 70, 77, 1);
  }
 
 .box1 a{
-   background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
+   background-image: url("http://reformas.herokuapp.com/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
  }
 
 .box2 a{
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
+  background-image: url("http://reformas.herokuapp.com/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
 }
 
 .box3 a{
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
+  background-image: url("http://reformas.herokuapp.com/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
 }
 .box4 a{
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
+  background-image: url("http://reformas.herokuapp.com/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
 }
 .box5 a{
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
+  background-image: url("http://reformas.herokuapp.com/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
 }
 
 .box6 a{
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
+  background-image: url("http://reformas.herokuapp.com/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg");
 }
 
 .find {
