Correccions en las url de las imagenes

--- a/wp-content/themes/twentyseventeen/assets/css/style.css
+++ b/wp-content/themes/twentyseventeen/assets/css/style.css
@@ -110,22 +110,22 @@
       background-color: rgba(50, 70, 77, 0.8); }
 
 .box1 a {
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
+  background-image: url("http://reformas.herokuapp.com/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
 
 .box2 a {
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
+  background-image: url("http://reformas.herokuapp.com/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
 
 .box3 a {
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
+  background-image: url("http://reformas.herokuapp.com/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
 
 .box4 a {
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
+  background-image: url("http://reformas.herokuapp.com/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
 
 .box5 a {
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
+  background-image: url("http://reformas.herokuapp.com/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
 
 .box6 a {
-  background-image: url("http://localhost:8888/cocinasmusa/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
+  background-image: url("http://reformas.herokuapp.com/wp-content/uploads/2016/12/vgoiy1gzzyg-atlas-green-1024x683.jpg"); }
 
 .find li {
   color: rgba(50, 70, 77, 0.8);
